# clean-document

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  autoencoder.keras  model_64_128.keras  pyproject.toml  requirements.txt  try-ai.py
.github/workflows/: main.yaml
ci/: config.yaml  requirements.txt
clean_document/: apply.py  cli.py  utils.py
cuda/: Dockerfile  pyproject.toml
cuda/scripts/: capabilities  get-pdf-no-scan  pdf-to-image  pre-train
results/: model_256_YUV_32_64-history.yaml  model_256_YUV_32_64-status.yaml  model_256_YUV_32_64.keras  model_256_YUV_32_64.summary  model_256_YUV_64_128_256-history.yaml  model_256_YUV_64_128_256-status.yaml  model_256_YUV_64_128_256.summary  model_32_64.summary  model_64_128-history.yaml  model_64_128-status.yaml  model_64_128.keras  model_64_128.summary
scripts/: README.md  capabilities  pre-train  remove-noise-train  segmentations-train  super-resolution  super-resolution-sub-pixel  train-finalization
