[tool.black]
line-length = 110
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 110

[tool.poetry]
name = "clean_document"
version = "0.0.0"
description = ""
authors = ["Stéphane Brunner <stephane.brunner@camptocamp.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow = "2.14.1"
keras = "2.14.0"
opencv-python = "4.9.0.80"

[tool.poetry.group.dev.dependencies]
matplotlib = "3.8.3"
numpy = "1.26.4"
scikit-image = "0.22.0"
scikit-learn = "1.4.1.post1"
pandas = "2.2.0"
pikepdf = "8.13.0"
pyyaml = "6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
