[tool.black]
line-length = 110
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 110

[tool.poetry]
name = "clean_document"
version = "0.0.0"
description = ""
authors = ["Stéphane Brunner <stephane.brunner@camptocamp.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
opencv-python = "*"

[tool.poetry.group.dev.dependencies]
scikit-image = "*"
pikepdf = "*"
pyyaml = "5.3.1"
tensorflow-examples = { git = "https://github.com/tensorflow/examples.git" }
pydot = "*"

[tool.poetry.group.nv.dependencies]
Pillow = "9.4.0"
pyparsing = "2.4.6"
keras = "2.11.0"
matplotlib = "3.1.2"
numpy = "1.21.1"
scikit-learn = "1.2.1"
#pandas = "1.5.3"
#tensorflow = "2.11.0.nv..."
absl-py = ">=1.0.0"
astunparse = ">=1.6.0"
flatbuffers = ">=2.0"
gast = "<=0.4.0,>=0.2.1"
google-pasta = ">=0.1.1"
h5py = ">=2.9.0"
jax = ">=0.3.15"
libclang = ">=13.0.0"
opt-einsum = ">=2.3.2"
protobuf = "!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<5.0.0dev,>=3.20.3"
six = ">=1.12.0"
termcolor = ">=1.1.0"
typing-extensions = ">=3.6.6"
wrapt = "<1.15,>=1.11.0"
grpcio = "<2.0,>=1.24.3"
tensorboard = "<2.13,>=2.12"
tensorflow-estimator = "<2.13,>=2.12.0"
keras = "<2.13,>=2.12.0"
tensorflow-io-gcs-filesystem = ">=0.23.1"
numpy = "<1.24,>=1.22"
